# DW-open-pose-editor

./: .gitignore  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt  test
.github/workflows/: publish_action.yml
js/: openpose.js  openpose.js.bak  openpose1.txt  openpose2.txt
workflow/: 姿势编辑.json
